# mold

./: .gitignore  CMakeLists.txt  README.md  main.cpp  measure.sh
.github/workflows/: ci.yml
include/mold/: config.h  mold.h  version.h
include/mold/cbor/: cbor_debug.h  cbor_parse.h  cbor_sink.h  cbor_spec.h  cbor_util.h  cbor_write.h
include/mold/json/: json_debug.h  json_parse.h  json_sink.h  json_spec.h  json_util.h  json_write.h
include/mold/msgpack/: msgpack_debug.h  msgpack_parse.h  msgpack_sink.h  msgpack_spec.h  msgpack_util.h  msgpack_write.h
include/mold/refl/: io.h  parse_common.h  reflection.h  spec.h  to_tuple.h
include/mold/types/: bytes.h  field.h  null.h  nullable.h  range.h  std.h  string.h  uuid.h  vector.h
include/mold/util/: base64.h  common.h  concepts.h  container.h  debug.h  enum.h  error.h  half.h  sink.h
test/: test_cbor.cpp  test_common.h  test_json.cpp  test_msgpack.cpp  test_types.cpp  test_util.cpp  test_vector.cpp
